- Remove redundant "autoplay" play trigger when the player is ready - Correctly run CslpHandler code when the player is ready    - In particular enable the stream's "heartbeat" to start and continue - Repair loading spinner icon and video bar z-index to be visible on the video element

--- a/src/styles/videojs.scss
+++ b/src/styles/videojs.scss
@@ -1,2 +1,6 @@
 @import 'node_modules/video.js/src/css/video-js.scss';
 // @import 'node_modules/video.js/dist/video-js.css';
+
+.vjs-loading-spinner,.vjs-control-bar {
+    z-index: 2;
+}
